# stratum-cli

./: .gitignore  CLAUDE-CODE-E2E-TEST.md  CLAUDE-CODE-FIX-TC.md  CLAUDE-CODE-IMPLEMENT-TC.md  CLAUDE-CODE-PMF-PATCH.md  README.md  SPEC.md  pyproject.toml  scan_result.json
.github/workflows/: stratum-scan.yml
docs/: github-action.yml  telemetry.md
eval/: test_bug_fixes_bce.py  test_catalog_schema.py  test_compound_scoring.py  test_graph_export.py  test_pipeline_identity.py  test_pipeline_integration.py  test_real_e2e_identity.py  test_repair_scan_results.py  test_toxic_combinations.py
eval_outputs/: codebase_map.md  composition_coverage.md  dry_run_full_graph.json  dry_run_simple.json  enrichment_proof.md  finding_coverage.md  generate_eval.py  metrics_sample.json  patch_summary.md  schema_diff.md  terminal_output.txt
outputs/: batch-results.json  connection-validation.json  evaluation-summary.json  sample-rescan-ping.json  sample-usage-ping.json  terminal-default-v6.txt
pipeline/: README.md  audit.py  config.py  discover.py  generate_test_data.py  monitor.py  repair_scan_results.py  scan_runner.py  validate_e2e.py  validation.py
risk_map/: README.md  intelligence.py  models.py
scripts/: bulk_scan.py  repos.txt
spec/patches/: SPEC-MVP-PATCH.md  SPEC-PATCH-2.md  STRATEGY-20-OUT-OF-10.md  STRATUM-10-10-PATCH.md  STRATUM-50k-DATASET-STRATEGY.md  STRATUM-CHAIN-PATCH-v2.md  STRATUM-CHAIN-PATCH-v3.md  (+11 more)
stratum/: __init__.py  cli.py  fix.py  framework_tools.py  models.py  scanner.py
test_project/: .env  README.md  agent.py  learning_agent.py  tools.py
(+98 files in other folders)
