[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratum-cli"
version = "0.3.1"
description = "AI agent security scanner"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
stratum = "stratum.cli:main"

[tool.setuptools.packages.find]
include = ["stratum*"]
exclude = ["risk_map*"]
